# ESP_RFLINK

./: #auto_saved_files#  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  ESPxRF.kicad_pcb  ESPxRF.kicad_prl  ESPxRF.kicad_pro  ESPxRF.kicad_sch  LICENSE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  fp-info-cache  project-overview.md  ~ESPxRF.kicad_pcb.lck
Gerber/: ESPxRF-B_Cu.gbr  ESPxRF-B_Mask.gbr  ESPxRF-B_Paste.gbr  ESPxRF-B_Silkscreen.gbr  ESPxRF-Edge_Cuts.gbr  ESPxRF-F_Cu.gbr  ESPxRF-F_Mask.gbr  ESPxRF-F_Paste.gbr  ESPxRF-F_Silkscreen.gbr  ESPxRF-In1_Cu.gbr  ESPxRF-In2_Cu.gbr  ESPxRF-NPTH.drl  ESPxRF-PTH.drl  ESPxRF-User_Drawings.gbr  ESPxRF-job.gbrjob
application/: README.md  desktop-workbench.md  main.py
docs/: README.md  api-reference.md  architecture.md  beta-validation.md  case-study.md  documentation-index.md  firmware.md  first-run.md  getting-started.md  hardware.md  release-checklist.md  security-model.md  troubleshooting.md
hardware/: ASSEMBLY.md  BOARD_REVISION.md  BOM.md  LICENSE.md  PINOUT.md  README.md
manufacturing/: README.md  manufacturing-guide.md
scripts/: check_conflict_markers.py  check_docs_consistency.py  check_docs_links.py  package_release.py
sdk/: README.md  sdk-overview.md
sdk/python/: README.md  pyproject.toml  python-sdk-guide.md
sdk/python/examples/: bridge_to_mqtt.py  production_demo.py  rf_ping.py
sdk/python/tests/: test_cli_bridge.py  test_client_bridge.py  test_examples.py
sdk/python/wireless_dev_bridge/: __init__.py  cli.py  client.py  models.py  reports.py  transports.py
(+66 files in other folders)
