[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wireless-dev-bridge"
version = "0.1.0"
description = "Host SDK for the Wireless Dev Bridge ESP32-S3/nRF24 developer tool"
readme = "python-sdk-guide.md"
requires-python = ">=3.9"
authors = [
  { name = "Wireless Dev Bridge" }
]
dependencies = []

[project.optional-dependencies]
serial = ["pyserial>=3.5"]
websocket = ["websocket-client>=1.7"]
ble = ["bleak>=0.22"]
mqtt = ["paho-mqtt>=2.0"]
test = ["pytest>=8.0"]
all = ["pyserial>=3.5", "websocket-client>=1.7", "bleak>=0.22", "paho-mqtt>=2.0"]

[project.scripts]
wdb = "wireless_dev_bridge.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
testpaths = ["tests"]
